--- a/Optimization/Optimization/Optimization.vcxproj.filters
+++ b/Optimization/Optimization/Optimization.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="DotNetUitilities.cpp">
       <Filter>原始程式檔</Filter>
     </ClCompile>
+    <ClCompile Include="UIHandler.cpp">
+      <Filter>原始程式檔</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MyForm.h">
@@ -33,6 +36,9 @@
       <Filter>標頭檔</Filter>
     </ClInclude>
     <ClInclude Include="DotNetUtilities.h">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
+    <ClInclude Include="UIHandler.h">
       <Filter>標頭檔</Filter>
     </ClInclude>
   </ItemGroup>
