--- a/Optimization/Optimization/Optimization.vcxproj.filters
+++ b/Optimization/Optimization/Optimization.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="UIHandler.cpp">
       <Filter>原始程式檔</Filter>
     </ClCompile>
+    <ClCompile Include="Caculator.cpp">
+      <Filter>原始程式檔</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MyForm.h">
@@ -39,6 +42,12 @@
       <Filter>標頭檔</Filter>
     </ClInclude>
     <ClInclude Include="UIHandler.h">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
+    <ClInclude Include="Caculator.h">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
+    <ClInclude Include="DataStructure.h">
       <Filter>標頭檔</Filter>
     </ClInclude>
   </ItemGroup>
