--- a/Optimization/Optimization/Optimization.vcxproj.filters
+++ b/Optimization/Optimization/Optimization.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="Caculator.cpp">
       <Filter>原始程式檔</Filter>
     </ClCompile>
+    <ClCompile Include="Mathemagic.cpp">
+      <Filter>標頭檔</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MyForm.h">
